--- a/pages/AddRole/index.html
+++ b/pages/AddRole/index.html
@@ -6,6 +6,7 @@
     <title>新增角色</title>
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
+    <link rel="stylesheet" href="./role.css">
     <script src="./addRole.js"></script>
 </head>
 
@@ -18,28 +19,44 @@
 
     <div class="add-box">
         <form class="addForm" id="form1" name="form1" action="">
-            <input type="hidden" name="id" value="" id="roleId"/>
+            <input type="hidden" name="id" value="" id="roleId" />
             <table width="100%" cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td align="center">角色名称</td>
-                        <td><input type="text" name="roleName" value="" class="form-control" id="roleName" datatype="*1-50"
-                                errormsg="最多填写50个字符串" nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
+                        <td colspan="7"><input type="text" name="roleName" value="" class="form-control" id="roleName"
+                                datatype="*1-50" errormsg="最多填写50个字符串" nullmsg="请输入角色名称" placeholder="请输入角色名称"></td>
                     </tr>
                     <tr>
-                        <td align="center">请选择角色权限</td>
-                        <td id="menuList">
-                            <!-- <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox"  value=""/>公司管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>客户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>用户管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>人员管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>角色管理</label>
-                            <label style="margin-right:1%"><input type="checkbox" class="menuCheckBox" value=""/>权限管理</label> -->
+                        <td align="center">管理员权限</td>
+                        <td colspan="7">
+                            <select class="form-control" name="isSuperAdmin" id="isSuperAdmin">
+                                <option value="">选择管理员权限</option>
+                                <option value="1">超级管理员</option>
+                                <option value="2">普通管理员</option>
+                            </select>
                         </td>
+                    </tr>
+                    <tr id="menuList">
+                        <td align="center">请选择角色权限</td>
+                        <input type="hidden" id="roles" name="menuIds" value="" />
+                        <!-- <td width="10%">
+                            <h1 class="select-all-title"><span class="moduletype-1" data-id="1">系统设置</span></h1>
+                            <div class="selectList">
+                                <div class="select-all module-1" data-id="2" data-moduletypeid="1">模块信息管理</div>
+                                <div class="select-all module-1" data-id="3" data-moduletypeid="1">后台用户列表</div>
+                                <div class="select-all module-1" data-id="4" data-moduletypeid="1">用户群组列表</div>
+                                <div class="select-all module-1" data-id="5" data-moduletypeid="1">字典类型管理</div>
+                                <div class="select-all module-1" data-id="6" data-moduletypeid="1">字典数据管理</div>
+                                <div class="select-all module-1" data-id="7" data-moduletypeid="1">系统临时文件</div>
+                                <div class="select-all module-1" data-id="8" data-moduletypeid="1">数据系统备份</div>
+                                <div class="select-all module-1" data-id="84" data-moduletypeid="1">规则权限列表</div>
+                            </div>
+                        </td>-->
                     </tr>
                     <tr>
                         <td>&nbsp;</td>
-                        <td>
+                        <td colspan="7">
                             <button type="submit" class="btn btn-success" id="saveButton"><i class="fa fa-check"
                                     aria-hidden="true"></i>
                                 添加</button>
