--- a/pages/StageManage/index.html
+++ b/pages/StageManage/index.html
@@ -58,14 +58,14 @@
 
 
     <ul class="pagination">
-        <li class="active"><a href="#">1</a></li>
+        <!-- <li class="active"><a href="#">1</a></li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
         <li><a href="#">下一页</a></li>
         <li><a>共44条记录</a></li>
-        <li><a>第1页/共5页</a></li>
+        <li><a>第1页/共5页</a></li> -->
     </ul>
 
 </body>
