--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -19,24 +19,21 @@
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')"><i class="fas fa-edit"></i>修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <button type="button" class="btn btn-primary navbar-btn listButton" onclick="javascript:if(confirm('由于数据存在关联查询，导出Exce可能需要1-3分钟的时间，确定要导出吗（确定后请勿刷新页面或关闭浏览器）?'))location='/manage.php/Order/exportExcel?startTime=&amp;endTime=&amp;business_id=&amp;one_category=&amp;two_category='"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
-<form class="navbar-form navbar-right listSearch" role="search" method="get" >
+<div class="navbar-form navbar-right listSearch">
 <div class="form-group">
-<div class="form-group">
-    手机号:
-    <input name="phone" type="text" class="form-control" id="phone" placeholder="请输入关键词进行搜索">
+    <span style="vertical-align: middle;">手机号:</span>
+    <input name="phone" type="text" class="form-control" id="search_phone" placeholder="请输入关键词进行搜索">
 </div>
 <div class="form-group">
-    姓名:
-    <input name="name" type="text" class="form-control" id="name" placeholder="请输入关键词进行搜索">
+    <span style="vertical-align: middle;">姓名:</span>
+    <input name="name" type="text" class="form-control" id="search_name" placeholder="请输入关键词进行搜索">
 </div>
 <div class="form-group">
-    Id:
-    <input name="Id" type="text" class="form-control" id="Id" placeholder="请输入关键词进行搜索">
+    <span style="vertical-align: middle;">Id:</span>
+    <input name="Id" type="text" class="form-control" id="search_Id" placeholder="请输入关键词进行搜索">
 </div>
-    <!-- <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索"> -->
-</div>
-<button  class="btn btn-primary" id="btn-search"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
-</form>    
+<button class="btn btn-primary" id="search_btn"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
+</div>    
 </div>
 </nav>
 
@@ -86,15 +83,16 @@
 
 
 
+
 <ul class="pagination">
-    <!-- <li class="active"><a href="#">1</a></li>
+    <li class="active"><a href="#">1</a></li>
     <li><a href="/manage.php/Order/orderList/p/2.html">2</a></li>
     <li><a href="/manage.php/Order/orderList/p/3.html">3</a></li>
     <li><a href="/manage.php/Order/orderList/p/4.html">4</a></li>
     <li><a href="/manage.php/Order/orderList/p/5.html">5</a></li>
     <li><a href="/manage.php/Order/orderList/p/2.html">下一页</a></li>
     <li><a>共44条记录</a></li>
-    <li><a>第1页/共5页</a></li> -->
+    <li><a>第1页/共5页</a></li>
 </ul>
 
 </body>
