--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -56,7 +56,7 @@
 
           <tr>
             <td align="center">账号</td>
-            <td><input type="text" name="account" id="account" class="form-control" value="" ></td>
+            <td><input type="text" name="account" id="account" class="form-control" value=""  required></td>
           </tr>
 
           <tr>
