--- a/pages/PersonnelManageModify/index.html
+++ b/pages/PersonnelManageModify/index.html
@@ -50,7 +50,7 @@
                     <tr>
                         <td align="center">账号</td>
                         <td>
-                            <input type="text" name="username" id="username" class="form-control" datatype="*" onkeyup="this.value=this.value.replace(/[^a-zA-Z0-9]/g,'')"
+                            <input type="text" name="username" id="username" class="form-control" datatype="*" onkeyup="this.value=this.value.replace(/[^a-zA-Z0-9]/g,'111')"
                                 nullmsg="请输入账号" placeholder="请输入账号">
                             <span id="warning_username" style="color: red"></span>
                         </td>
