--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -49,10 +49,10 @@
                     
                     <tr>
                         <td align="center">手机号</td>
-                        <td><input type="text" name="phone" id="user_phone" class="form-control"  datatype="m" errormsg="手机号码格式不正确！" nullmsg="请填写手机号码！" placeholder="请输入手机号"></td>
+                        <td><input type="tel" name="phone" id="user_phone" class="form-control"  datatype="m" errormsg="手机号码格式不正确！" nullmsg="请填写手机号码！" placeholder="请输入手机号"></td>
                     </tr>
 
-                    <tr>
+                    <tr class="wechat">
                         <td align="center">微信</td>
                         <td><input type="text" name="wechat" id="user_wechat" class="form-control" datatype="*"  nullmsg="请输入微信号" placeholder="请输入微信号"></td>
                     </tr>
