--- a/pages/About/index.html
+++ b/pages/About/index.html
@@ -49,7 +49,10 @@
             cursor: pointer;
         }
     </style>
-    
+    <script>
+        $.closeLoading();
+    </script>
+
 </head>
 
 <body>
@@ -60,8 +63,8 @@
     </nav>
 
     <div class="add-box">
-        <form class="addForm ajax-fadein" id="form1" name="form1" action="">
-            <input name="id" type="hidden" id="id" value="1" />
+        <form class="addForm" id="form1" name="form1" >
+            <!-- <input name="id" type="hidden" id="id" value="1" /> -->
             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                 <tbody>
 
@@ -73,7 +76,7 @@
                     <tr>
                         <td>&nbsp;</td>
                         <td>
-                            <button class="btn btn-success ajax-post" type="submit" id="saveButton" target-form="form-horizontal">
+                            <button class="btn btn-success" type="button" id="saveButton" target-form="form-horizontal">
                                 <i class="fa fa-save" aria-hidden="true"></i> 保存</button>
                             <button type="button" class="btn btn-default" id="cancelButton"><i class="fa fa-times"
                                     aria-hidden="true"></i> 取消</button>
