--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -121,6 +121,7 @@
         todayHighlight: 1,//今天高亮
         startDate:new Date(), //设置开始时间
         minTime: '10',
+        language: 'zh-CN',
         startView:2,
         forceParse: 0,
         showMeridian: 1,
