--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -104,6 +104,7 @@
     $(".form_datetime").datetimepicker({
         format: 'yyyy/mm/dd hh:ii', //显示格式
         todayHighlight: 1, //今天高亮
+        language: 'zh-CN', //中文
         minTime: '10',
         startView: 2,
         forceParse: 0,
