--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -99,6 +99,7 @@
 		format: 'yyyy/mm/dd hh:ii', //显示格式
 		todayHighlight: 1, //今天高亮
 		minTime: '10',
+		language: 'zh-CN',
 		startView: 2,
 		forceParse: 0,
 		showMeridian: 1,
