--- a/pages/CustomerList/index.html
+++ b/pages/CustomerList/index.html
@@ -21,7 +21,7 @@
 				 class="fas fa-trash-alt"></i> 删除</button>
 			<form class="navbar-form navbar-right listSearch" role="search">
 				<div class="form-group">
-					<!-- <input type="text" class="form-control" id="IdKeyWord" placeholder="输入ID进行搜索" /> -->
+					<input type="text" class="form-control" id="IdKeyWord" placeholder="输入ID进行搜索" />
 					<input type="text" class="form-control" id="NameKeyWord" placeholder="输入姓名进行搜索" />
 					<select class="form-control" name="moduleType" id="companySelect">
 						<option value="" selected="">选择公司进行搜索</option>
@@ -63,20 +63,19 @@
 			</thead>
 			<tbody>
 				<!-- <tr>
-<td><input type="checkbox" name="del_listID" id="del_listID" data-name="multi-select" value="<{$vo.id}>" /></td>
-<td></td>
-<td></td>
-<td><a href="#">查看电话</a></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td></td>
-<td width="30%" style="cursor: pointer;"></td>
-<td><a class="btn btn-success navbar-btn" href="#">详情</a></td>
-</tr> -->
-
+					<td><input type="checkbox" name="del_listID" id="del_listID" data-name="multi-select" value="<{$vo.id}>" /></td>
+					<td></td>
+					<td></td>
+					<td><a href="#">查看电话</a></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td></td>
+					<td width="30%" style="cursor: pointer;"></td>
+					<td><a class="btn btn-success navbar-btn" href="#">详情</a></td>
+				</tr> -->
 			</tbody>
 		</table>
 
