--- a/pages/AddUser/index.html
+++ b/pages/AddUser/index.html
@@ -49,7 +49,7 @@
                     
                     <tr>
                         <td align="center">手机号</td>
-                        <td><input type="tel" name="phone" id="user_phone" class="form-control"  datatype="m" errormsg="手机号码格式不正确！" nullmsg="请填写手机号码！" placeholder="请输入手机号"></td>
+                        <td><input type="text" name="phone" id="user_phone" class="form-control" placeholder="请输入手机号" datatype="/^((13[0-9])|(14[5,7,9])|(15[^4])|(18[0-9])|(19[9])|(17[0,1,3,5,6,7,8]))\d{8}$/" errormsg="输入电话号码格式不正确" nullmsg="请输入电话号码"></td>
                     </tr>
 
                     <tr>
