--- a/pages/AddPersonnel/index.html
+++ b/pages/AddPersonnel/index.html
@@ -61,8 +61,7 @@
 
           <tr>
             <td align="center">密码</td>
-            <td><input type="password" name="password" id="business_passwd" class="form-control" datatype="*6-15"
-                errormsg="密码范围在6~15位之间" nullmsg="请输入密码" placeholder="请输入密码"></td>
+            <td><input type="password" name="password" id="business_passwd" class="form-control" datatype="/^(?![0-9]+$)(?![a-zA-Z]+$)[0-9A-Za-z]{6,16}$/" errormsg="密码由6~16位之间数字或字母组成" nullmsg="请输入密码" placeholder="请输入密码"></td>
           </tr>
           
           <tr>
