--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -20,8 +20,8 @@
 <button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteUser','GET','userId')"><i class="fas fa-trash-alt"></i> 删除</button>
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')"><i class="fas fa-edit"></i>修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
-<button type="button" class="btn btn-primary navbar-btn listButton" onclick="javascript:if(confirm('由于数据存在关联查询，导出Exce可能需要1-3分钟的时间，确定要导出吗（确定后请勿刷新页面或关闭浏览器）?'))location='/manage.php/Order/exportExcel?startTime=&amp;endTime=&amp;business_id=&amp;one_category=&amp;two_category='"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
-<button type="button" class="btn btn-primary navbar-btn listButton"><i class="fa fa-sellcast" aria-hidden="true"></i> 全选</button>
+<button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
+<button type="button" class="btn btn-info navbar-btn listButton" id="allChecked"><i class="fa fa-sellcast" aria-hidden="true"></i> 全选</button>
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
     <input name="phone" type="text" class="form-control" style="width:160px;" id="search_phone" placeholder="输入手机号进行搜索">
@@ -33,7 +33,13 @@
     <input name="Id" type="text" class="form-control" style="width:130px;" id="search_Id" placeholder="输入Id进行搜索">
 </div>
 <button class="btn btn-primary" id="search_btn"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
-</div>    
+</div>
+<div class="navbar-form navbar-right listSearch">
+<div class="form-group">
+    <input name="department" type="text" class="form-control" style="width:150px;" id="filter_department" placeholder="输入部门名称进行筛选">
+</div>
+    <button type="button" class="btn btn-primary" id="filter_btn"><i class="fa fa-calendar-check" aria-hidden="true"></i> 筛选</button>
+</div>
 </div>
 </nav>
 
