--- a/pages/CompanyList/index.html
+++ b/pages/CompanyList/index.html
@@ -34,7 +34,7 @@
             </form>
             <form class="navbar-form navbar-right listSearch" role="search">
                 <div class="form-group">
-                    <input id="citySearch" type="text" class="form-control" placeholder="输入所在地区">
+                    <input id="citySearch" type="text" class="form-control" placeholder="输入省(或市、区)">
                     <input type="text" id="openTime" class="form-control jcDate form_datetime" placeholder="选择开户时间" />
                     <input type="text" id="overTime" class="form-control jcDate form_datetime" placeholder="选择截止时间" />
                     <select class="form-control" name="parent_id" id="status">
@@ -67,7 +67,7 @@
                     <th>开户时间</th>
                     <th>截止时间</th>
                     <th>后台账号</th>
-                    <th>账户最近登录时间</th>
+                    <th>最近登录时间</th>
                     <th>操作</th>
                 </tr>
             </thead>
