--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -21,7 +21,7 @@
 <button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../AddUser/index.html')"><i class="fas fa-edit"></i>修改</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('../AddUser/index.html')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
 <button type="button" class="btn btn-primary navbar-btn listButton" id="export"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
-<button type="button" class="btn btn-info navbar-btn listButton" id="allChecked"><i class="fa fa-sellcast" aria-hidden="true"></i> 全选</button>
+<button type="button" class="btn btn-info navbar-btn listButton" id="allChecked"><i class="fa fa-sellcast" aria-hidden="true"></i><span id="changeTxt"> 全选</span></button>
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
     <input name="phone" type="text" class="form-control" style="width:160px;" id="search_phone" placeholder="输入手机号进行搜索">
@@ -105,4 +105,5 @@
 </body>
 
 <script src="./userList.js"></script>
+<!-- <script src="./exportXls.js"></script> -->
 </html>
