--- a/pages/BusinessList/index.html
+++ b/pages/BusinessList/index.html
@@ -22,8 +22,9 @@
 <a class="navbar-brand" href="#">查看商机列表</a>
 </div>
 <div>
-<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('News')"><i class="fas fa-trash-alt"></i> 删除</button>
-<button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('addNews')"><i class="fas fa-edit"></i> 修改</button>
+<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('/deleteOpportunity','GET','opportunityId')"><i class="fas fa-trash-alt"></i> 删除</button>
+<button type="button" class="btn btn-info navbar-btn listButton" onclick="editData('../EditBusiness/index.html')"> <i class="fas fa-edit"></i>
+  修改</button>
 <!-- <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addNews')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button> -->
 <div class="navbar-form navbar-right listSearch">
 <div class="form-group">
@@ -52,6 +53,9 @@
   </div>
   <div class="form-group">
     <input name="city" type="text" class="form-control" style="width:100px;" id="filter_city" placeholder="城市">
+  </div>
+  <div class="form-group">
+    <input name="responsible" type="text" class="form-control" style="width:100px;" id="filter_responsible" placeholder="负责人">
   </div>
   <button type="button" class="btn btn-primary" id="filter_btn"><i class="fa fa-calendar-check" aria-hidden="true"></i>
     筛选</button>
